@@ -1,7 +1,6 @@
 package com.masteryhub.todoapp.security;
 
 import com.masteryhub.todoapp.models.UserEntity;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -30,10 +29,7 @@ public class UserDetailsImpl implements UserDetails {
     this.username = username;
     this.email = email;
     this.password = password;
-    this.authorities =
-        (authorities == null || authorities.isEmpty())
-            ? Collections.emptyList()
-            : Collections.unmodifiableList(new ArrayList<>(authorities));
+    this.authorities = authorities == null ? Collections.emptyList() : List.copyOf(authorities);
     this.__v = __v;
   }
 
